--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Test Fallback Link</h1>
   <button onclick="tryLink()">Go to Link</button>
-  <button id="fallbackBtn" onclick="window.location.href='https://your-fallback-link.com'">Fallback Link</button>
+  <button id="fallbackBtn" onclick="window.location.href='https://youtu.be/APw-S7PAk-k?si=DT1bZF6y2-n269-M'">Fallback Link</button>
   <iframe id="iframeArea"></iframe>
   <script>
     function tryLink() {
