--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
-  <title>Test Fallback Link</title>
+  <meta charset="UTF-8">
+  <title>اختبار الرابط الاحتياطي</title>
+  <style>
+    #fallbackBtn { display: none; margin-top: 10px; }
+    #iframeArea { display: none; }
+  </style>
 </head>
 <body>
-  <h1>Test Fallback Link</h1>
-  <button onclick="window.location.href='https://your-main-link.com'">Go to Main Link</button>
-  <button onclick="window.location.href='https://your-fallback-link.com'">Go to Fallback Link</button>
+  <h1>اختبار رابط التحويل الاحتياطي</h1>
+  <button id="mainBtn" onclick="tryMainLink()">اذهب إلى الرابط الأساسي</button>
+  <button id="fallbackBtn" onclick="window.location.href='https://youtu.be/8C-5M5FSEis?si=zpeJv9TvWY16bN9N'">اذهب إلى الرابط الاحتياطي</button>
+  <iframe id="iframeArea"></iframe>
+  <script>
+    function tryMainLink() {
+      // أخفي زر الرابط الأساسي وأظهر الـ iframe لمحاولة التحميل
+      document.getElementById('mainBtn').style.display = 'none';
+      var iframe = document.getElementById('iframeArea');
+      iframe.src = 'https://الرابط-الأساسي.com';
+      iframe.style.display = 'block';
+
+      // إذا لم يتم تحميل الصفحة خلال 5 ثواني، أظهر زر الرابط الاحتياطي
+      var fallbackTimer = setTimeout(function() {
+        document.getElementById('fallbackBtn').style.display = 'inline-block';
+        alert("الرابط الأساسي لم يتم تحميله، جرب الرابط الاحتياطي!");
+      }, 5000);
+
+      // إذا تم تحميل الصفحة بنجاح داخل iframe، أخفي زر الاحتياطي (بعض المواقع قد تمنع إظهار الحدث بسبب السياسات)
+      iframe.onload = function() {
+        clearTimeout(fallbackTimer);
+        // يمكنك هنا التحويل مباشرة أو إعطاء إشعار بالنجاح
+        alert("تم تحميل الرابط الأساسي بنجاح!");
+      };
+    }
+  </script>
 </body>
 </html>
