--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>اختبار رابط التحويل الاحتياطي</h1>
-  <button id="mainBtn" onclick="tryMainLink()">اذهب إلى الرابط الأساسي</button>
+  <button id="mainBtn" onclick="tryMainLink(https://youtu.be/8C-5M5FSEis?si=zpeJv9TvWY16bN9N)">اذهب إلى الرابط الأساسي</button>
   <button id="fallbackBtn" onclick="window.location.href='https://youtu.be/8C-5M5FSEis?si=zpeJv9TvWY16bN9N'">اذهب إلى الرابط الاحتياطي</button>
   <iframe id="iframeArea"></iframe>
   <script>
