--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     const items = [
       {
         name: "فيديو 1",
-        main: "https://example.com/video1",
-        fallback: "https://backup.com/video1"
+        main: "https://rt.pornhub.com/?sear",
+        fallback: "https://youtu.be/8C-5M5FSEis?si=zpeJv9TvWY16bN9N"
       },
       {
         name: "تطبيق 1",
